:recycle::lipstick::sparkles: adds atoms, molecules and templates

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 @import "./tailwind.css";
 
 @import "./atoms/index.css";
+@import "./molecules/index.css";
 @import "./base/index.css";
 @import "./components/index.css";
 @import "./layouts/index.css";
