--- a/styles/atoms/index.css
+++ b/styles/atoms/index.css
@@ -1,1 +1,8 @@
-@import "./button.css";
+@import "./spacing.css";
+@import "./typography.css";
+@import "./interactions.css";
+@import "./animations.css";
+@import "./surfaces.css";
+@import "./icons.css";
+@import "./layout.css";
+@import "./states.css";
