:sparkles::lipstick: adds cards, badges, grids atoms

--- a/styles/atoms/index.css
+++ b/styles/atoms/index.css
@@ -6,3 +6,6 @@
 @import "./icons.css";
 @import "./layout.css";
 @import "./states.css";
+@import "./cards.css";
+@import "./badges.css";
+@import "./grids.css";
