--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
 
 @import "./atoms/index.css";
 @import "./molecules/index.css";
+@import "./templates/index.css";
 @import "./base/index.css";
 @import "./components/index.css";
 @import "./layouts/index.css";
